--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>HTML template</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+
 <body>
+
   <header>
     <h1>HTML template</h1>
   </header>
@@ -13,7 +15,7 @@
   <main>
   <p>Lorem ipsum dolor sit amet.</p>
 <img src="images/logo.svg" alt="">
-<a href="https://www.wikipedia.org#">wikipedia</a>
+<a href="https://www.wikipedia.org#">Wikipedia</a>
   </main>
 </body>
 
